enhanced ex 2.6